# automl_tool

./: Cargo.toml  README.md  data.csv  generate_data.py  test_data.csv
src/: automl.rs  data.rs  main.rs
src/models/: decision_tree.rs  logistic.rs  mod.rs  svm.rs
