[package]
name = "automl_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

csv = "1.1"
serde = { version = "1.0", features = ["derive"] }

ndarray = "0.15"
ndarray-csv = "0.5"

linfa = "0.7"
linfa-logistic = "0.7"
linfa-trees = "0.7"
linfa-svm = "0.7"

rayon = "1.7"